src/snapshots/whatscli__app__tests__media_modal_compact.snap
---
source: src/app.rs
expression: "render(&mut app, 86, 26)"
---
 WhatsCLI v1.1.7  Maria Oliveira ● online
  con┌ photo.webp · image · Halfblocks ────────────────────────────────────────┐
 Conv│                                                                         │
 › • │                                                                         │
     │                                                                         │
   # │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │s te
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │                                                                         │
     │ [ Close ]                                                               │
     │ the image or WebP sticker is corrupt or unsupported                     │
┌ Mes│                                                                         │─────┐
│ Typ│                                                                         │     │
└────└─────────────────────────────────────────────────────────────────────────┘─────┘
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
