src/snapshots/whatscli__app__tests__media_modal_narrow.snap
---
source: src/app.rs
expression: "render(&mut app, 60, 24)"
---
 WhatsCLI v1.1.7  Maria Oliveira ● online
  co┌ photo.webp · image · Halfblocks ─────────────────┐
 ───│                                                  │
  Ma│                                                  │
  Oi│                                                  │
  12│                                                  │
    │                                                  │
    │                                                  │
    │                                                  │te
    │                                                  │
    │                                                  │
    │                                                  │
    │                                                  │
    │                                                  │
    │                                                  │
    │                                                  │
    │                                                  │
    │                                                  │
    │ [ Close ]                                        │
    │ the image or WebP sticker is corrupt or          │
┌ Me│ unsupported                                      │───┐
│ Ty│                                                  │   │
└───└──────────────────────────────────────────────────┘───┘
 Enter send · Ctrl+p commands · Ctrl+f search · Tab chats
