src/snapshots/whatscli__app__tests__media_modal_short.snap
---
source: src/app.rs
expression: "render(&mut app, 100, 12)"
---
 WhatsCLI v1.1.6  Maria Oliveira ● online
 Conve┌ photo.webp · image · Halfblocks ─────────────────────────────────────────────────────┐
 › • M│                                                                                      │
     V│                                                                                      │
   # E│                                                                                      │
     R│                                                                                      │
      │ [ Close ]                                                                            │o as
      │ the image or WebP sticker is corrupt or unsupported                                  │
      │                                                                                      │
      │                                                                                      │
──────└──────────────────────────────────────────────────────────────────────────────────────┘──────
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
