src/snapshots/whatscli__app__tests__media_modal_wide.snap
---
source: src/app.rs
expression: "render(&mut app, 120, 32)"
---
 WhatsCLI v1.1.6  Maria Oliveira ● online
  conve┌ photo.webp · image · Halfblocks ──────────────────────────────────────────────────────────────────────┐
 Conver│                                                                                                       │
 › • Ma│                                                                                                       │
     Vo│                                                                                                       │
     ◇ │                                                                                                       │
   # Eq│                                                                                                       │
     Ra│                                                                                                       │
     ◇ │                                                                                                       │bém 😊
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │                                                                                                       │
       │ [ Close ]                                                                                             │
       │ the image or WebP sticker is corrupt or unsupported                                                   │
┌ Messa│                                                                                                       │───────┐
│ Type │                                                                                                       │       │
└──────└───────────────────────────────────────────────────────────────────────────────────────────────────────┘───────┘
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
