src/snapshots/whatscli__app__tests__pairing.snap
---
source: src/app.rs
expression: "render(&mut app, 100, 28)"
---
 WhatsCLI v1.1.7  Maria Oliveira ● online
  con┌ Link WhatsCLI ─────────────────────────────────────────────────────────────────────────┐
 Conv│                                                                                        │
 › • │                            Scan with WhatsApp on your phone                            │
     │                        Settings → Linked devices → Link a device                       │
     │                                                                                        │
   # │                                        ████  ██                                        │
     │                                        ██  ████                                        │
     │                                        ████████                                        │ as
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                                                                                        │
     │                         Expires in 44s  ·  Esc hides this code                         │
┌ Mes│                                                                                        │────┐
│ Typ│                                                                                        │    │
└────└────────────────────────────────────────────────────────────────────────────────────────┘────┘
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
