src/snapshots/whatscli__app__tests__theme_ansi16.snap
---
source: src/app.rs
expression: "format!(\"{:?}\\n{}\", Theme::from_config(&app.config),\nrender(&mut app, 100, 24))"
---
Theme { background: Black, surface: Black, elevated: DarkGray, foreground: White, muted: Gray, primary: Green, info: Cyan, warning: Yellow, error: Red, incoming: DarkGray, outgoing: Green, mode: Ansi16 }
 WhatsCLI v1.1.6  Choose a conversation ● online
  conversations / thread / composer         ┌────────────────────────────────────────────────────┐
 Conversations               │              │ Connection failed. Try again.                      │
 › • Maria Oliveira [2]      │              └────────────────────────────────────────────────────┘
     Você viu as fotos da vi │
     ◇ message  12:06        │
   # Equipe Produto          │
     Ravi: revisão amanhã às │
     ◇ message  09:20        │                                   ◉
                             │           Your conversations, without leaving the terminal
                             │         Select a chat on the left or press Ctrl+f to search.
                             │                      Ctrl+p opens every action.
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
┌ Message ─────────────────────────────────────────────────────────────────────────────────────────┐
│ Select a conversation to start                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
