src/snapshots/whatscli__app__tests__theme_truecolor.snap
---
source: src/app.rs
expression: "format!(\"{:?}\\n{}\", Theme::from_config(&app.config),\nrender(&mut app, 100, 24))"
---
Theme { background: Rgb(11, 20, 26), surface: Rgb(17, 27, 33), elevated: Rgb(32, 44, 51), foreground: Rgb(233, 237, 239), muted: Rgb(134, 150, 160), primary: Rgb(0, 168, 132), info: Rgb(83, 189, 235), warning: Rgb(255, 210, 121), error: Rgb(241, 92, 109), incoming: Rgb(32, 44, 51), outgoing: Rgb(0, 92, 75), mode: TrueColor }
 WhatsCLI v1.1.6  Choose a conversation ● online
  conversations / thread / composer         ┌────────────────────────────────────────────────────┐
 Conversations               │              │ Connection failed. Try again.                      │
 › • Maria Oliveira [2]      │              └────────────────────────────────────────────────────┘
     Você viu as fotos da vi │
     ◇ message  12:06        │
   # Equipe Produto          │
     Ravi: revisão amanhã às │
     ◇ message  09:20        │                                   ◉
                             │           Your conversations, without leaving the terminal
                             │         Select a chat on the left or press Ctrl+f to search.
                             │                      Ctrl+p opens every action.
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
┌ Message ─────────────────────────────────────────────────────────────────────────────────────────┐
│ Select a conversation to start                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
